2014-05-22  Roland Levillain  <roland@lrde.epita.fr>

	Fix Doxygen command names in Milena documentation.

	* mln/topo/is_not_1d_isthmus.hh,
	* mln/topo/is_not_end_point.hh,
	* mln/topo/is_simple_point2d.hh,
	* mln/topo/is_simple_point3d.hh:
	Here.

2014-05-22  Roland Levillain  <roland@lrde.epita.fr>

	Address Clang warnings in Milena.

	* mln/core/image/dmorph/mutable_extension_ima.hh,
	* tests/metal/is.cc,
	* tests/transform/fft.cc:
	Here.

2014-05-20  Roland Levillain  <roland@lrde.epita.fr>

	Improve tests on mln::border::mirror.

	* tests/border/mirror.cc: Revamp.
	* tests/border/Makefile.am (check_PROGRAMS): Reenable mirror_full.

2012-10-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a precondition (Trac ticket #256).

	* mln/core/internal/site_relative_iterator_base.hh: Here.

2014-04-02  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Streamline mln/test/positive.cc.

	* tests/test/positive.cc: Here.

2014-04-02  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Improve the documentation of mln::test::positive.

	* mln/test/positive.hh: Here.

2014-04-02  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Simplify tests/pw/value.cc.

	* tests/pw/value.cc: Here.

2014-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Simplify the implementation of mln::fun::vv2v::algebra::vec.

	* mln/fun/vv2v/vec.hh (mln::fun::vv2v::algebra::vec::operator()):
	Here.
	Fix the documentation.

2011-01-17  Roland Levillain  <roland@lrde.epita.fr>

	* apps/bench/list2table: Generate a shorter table.

2011-01-13  Roland Levillain  <roland@lrde.epita.fr>

	apps/bench: Simplify `fast_static' and `faster_static' cases.

	* apps/bench/trait.hh (mln_static_qixter, mln_static_qixter_)
	(mln_static_fwd_qixter, mln_static_fwd_qixter_)
	(mln_static_bkd_qixter, mln_static_bkd_qixter_):
	Remove macros.
	(mln::static_fwd_qixter, mln::static_bkd_qixter):
	Remove traits.
	(mln::fwd_qixter< image2d<T>, static_window<D, n> >)
	(mln::fwd_qixter< const image2d<T>, static_window<D, n> >)